[package]
name = "cpal-demo"
version = "0.1.0"
authors = ["Kawaki-san <rtkayy123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.3"
deepspeech = "0.9.0"
dasp_interpolate = { version = "0.11", features = ["linear"] }
dasp_signal = "0.11"
